k8s/gateway/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/strip-path: "true"
    konghq.com/plugins: cors
spec:
  rules:
    - http:
        paths:
          - path: /tweet
            pathType: Prefix
            backend:
              service:
                name: tweet-service
                port:
                  number: 3001
